# invoice-scout

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  devenv.nix  main.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
invoice_scanner/: __init__.py  app.py  cli.py  config.py  drive.py  google_api.py  oauth.py  openrouter.py  sheets.py  utils.py
tests/: test_app.py  test_config_state.py  test_openrouter.py  test_utils.py
